--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="box">
+       <a href="about.html">
         <h1>tic tac toe</h1>
+       </a>
         <div class="outline">
             <div class="row one">
                 <div class="sub">
